force-app/main/default/objects/Exquisite_Corpse__c/Exquisite_Corpse__c.object-meta.xml
<CustomObject>
    <description>Represents a single Exquisite Corpse drawing, with a collection of users/contributors</description>
    <label>Exquisite Corpse</label>
    <nameField>
        <label>Exquisite Corpse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Exquisite Corpses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>