force-app/main/default/objects/Exquisite_Corpse__c/fields/Body_Part_Set__c.field-meta.xml
<CustomField>
    <fullName>Body_Part_Set__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Body Part Set</label>
    <referenceTo>Body_Part_Set__c</referenceTo>
    <relationshipLabel>Exquisite Corpses</relationshipLabel>
    <relationshipName>Exquisite_Corpses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>