force-app/main/default/objects/Exquisite_Corpse__c/fields/Body_Type__c.field-meta.xml
<CustomField>
    <fullName>Body_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Body Type</label>
    <referenceTo>Body_Type__c</referenceTo>
    <relationshipLabel>Exquisite Corpses</relationshipLabel>
    <relationshipName>Exquisite_Corpses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>